Fazendo CRUD de Clientes, Vagas e Veiculos

--- a/ui/Views/Shared/_Layout.cshtml
+++ b/ui/Views/Shared/_Layout.cshtml
@@ -24,6 +24,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ValorDoMinuto" asp-action="Index">Valores</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vagas" asp-action="Index">Vagas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Veiculos" asp-action="Index">Veiculos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
